--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -32,7 +32,7 @@
 	<br>
 	<button type="submit" class="submitbutton">Submit</button> 
 </form>
-<h3>Name: {{profileForm.value.name}}</h3>
-<h3>Email: {{profileForm.value.email}}</h3>
-<h3>Feedback: {{profileForm.value.feedback}}</h3>
-<h3>Comments: {{profileForm.value.comment}}</h3>
+<h3>Name: {{data.name}}</h3>
+<h3>Email: {{data.email}}</h3>
+<h3>Feedback: {{data.feedback}}</h3>
+<h3>Comments: {{data.comment}}</h3>
